rust/surreal-orm-tests/tests/snapshots/geometry__polygon_with_exterior_interior.snap
---
source: surreal-orm-tests/tests/geometry.rs
expression: geom
---
TestPolygon {
    id: SurrealId(
        Thing {
            tb: "test_polygon",
            id: Number(
                32,
            ),
        },
        PhantomData<geometry::TestPolygon>,
        PhantomData<i32>,
    ),
    home_polygon: Polygon {
        exterior: LineString(
            [
                Coord {
                    x: -111.0,
                    y: 45.0,
                },
                Coord {
                    x: -111.0,
                    y: 41.0,
                },
                Coord {
                    x: -104.0,
                    y: 41.0,
                },
                Coord {
                    x: -104.0,
                    y: 45.0,
                },
                Coord {
                    x: -111.0,
                    y: 45.0,
                },
            ],
        ),
        interiors: [
            LineString(
                [
                    Coord {
                        x: -110.0,
                        y: 44.0,
                    },
                    Coord {
                        x: -110.0,
                        y: 42.0,
                    },
                    Coord {
                        x: -105.0,
                        y: 42.0,
                    },
                    Coord {
                        x: -105.0,
                        y: 44.0,
                    },
                    Coord {
                        x: -110.0,
                        y: 44.0,
                    },
                ],
            ),
        ],
    },
}
